--- a/configuration/Languages/db2oraclemigration/db2oraclemigrationMetaModel.xml
+++ b/configuration/Languages/db2oraclemigration/db2oraclemigrationMetaModel.xml
@@ -2,64 +2,131 @@
 
 <metaModel file_level="client"  file_no="90">
 
-	<category name="db2oraclemigration" rid="2">
-		<description>db2oraclemigration</description>
-		<attribute name="extensions" stringValue="*.sql"/>
-		<inheritedCategory name="UniversalLanguage"/>
-		<inheritedCategory name="CsvLanguage"/>
-	</category>
-
-    
-	<category name="APM db2oraclemigration Module" rid="0">
-		<description>db2oraclemigration</description>
-		<inheritedCategory name="APM Client Modules"/>
-	</category>
-
-	<category name="APM db2oraclemigration Artifacts" rid="1">
-		<description>db2oraclemigration Artifacts</description>
-		<inheritedCategory name="APM Client Language Artifacts"/>
-		<!-- <inheritedCategory name="APM Sources"/> -->
-	</category>
-	
-	
-	
-	<!-- db2oraclemigration Enlighten group -->
-	<type name="Enlightendb2oraclemigration" rid="900">
-		<description>db2oraclemigration</description>
-		<tree parent="EnlightenUniversalObjects" category="EnlightenTree"/>
-	</type>
-	
-	<type name="db2oraclemigrationProject" rid="3">
-		<description>db2oraclemigration Project</description>
-		<inheritedCategory name="UAProject"/>
-		<inheritedCategory name="db2oraclemigration"/>
-		<inheritedCategory name="APM db2oraclemigration Module"/>
-	</type>
-	
-	<type name="db2oraclemigration_SUBSET" rid="400">
-		<description>db2oraclemigration Subset</description>
-		<inheritedCategory name="PROJECT_SUBSET"/>
-		<inheritedCategory name="db2oraclemigration"/>
-		<inheritedCategory name="APM db2oraclemigration Module"/>
-    </type>
-	
-	
-<!-- Artifacts defined -->
-	
-	<type name="db2oraclemigration_type" rid="4">
-		<description>DB2 to Oracle migration</description>
-		<inheritedCategory name="UAObject"/>
-		<inheritedCategory name="dboraclemigrationScript"/>
-		<inheritedCategory name="dboraclemigration_CustomMetrics"/>
-		<inheritedCategory name="APM db2oraclemigration Artifacts"/>
-		<tree parent="Enlightendb2oraclemigration" category="EnlightenTree"/>
-	</type>
-	
      <partialType name="sourceFile" >
         <inheritedCategory name="dboraclemigrationScript"/>
         <inheritedCategory name="dboraclemigration_CustomMetrics"/>
      </partialType> 
      
+     <partialType name="SQLScriptSchema">
+       <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+     <partialType name="SQLScriptTable" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+     
+     <partialType name="SQLScriptTableColumn" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+     
+     <partialType name="SQLScriptIndex" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+     <partialType name="SQLScriptProcedure" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+     <partialType name="SQLScriptDML" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+     <partialType name="SQLScriptFunction" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+     
+       <partialType name="SQLScriptView" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+    
+      <partialType name="SQLScriptTrigger" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+       <partialType name="SQLScriptPackage" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+      <partialType name="SQLScriptType" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+     <partialType name="SQLScriptForeignKey" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+        
+     <partialType name="SQLScriptUniqueConstraint" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+      <partialType name="SQLScriptEvent" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+     <partialType name="SQLScriptSynonym" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+    
+     <partialType name="SQLScriptTableSynonym" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+    
+     <partialType name="SQLScriptViewSynonym" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+    
+     <partialType name="SQLScriptFunctionSynonym" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+    
+     <partialType name="SQLScriptProcedureSynonym" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+     <partialType name="SQLScriptPackageSynonym" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+    <partialType name="SQLScriptTypeSynonym" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+    
+    
+     <partialType name="SQLScriptMethod" >
+        <inheritedCategory name="dboraclemigrationScript"/>
+        <inheritedCategory name="dboraclemigration_CustomMetrics"/>
+     </partialType> 
+     
+          
      <category name="dboraclemigration_CustomMetrics" id="2090800">
 	  <description>db2 to oracle migration code items need to be addressed</description>
 	 <property name="Built_in_SQL_Functions_variations" type="integer"   id="2090802">
